--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>{{ site.title }}</title>
+    <meta name="theme-color" content="#ff6924">
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="{{ site.description }}" />
