--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,10 +14,11 @@
 
 -->
 
-    {% include head.html %}
+{% include head.html %}
 
-    <body>
-        {{ content }}
-    </body>
+<body>
+    {{ content }}
+    {% include footer.html %}
+</body>
 
 </html>
