--- a/css/default.scss
+++ b/css/default.scss
@@ -101,6 +101,10 @@ body {
     background: linear-gradient(to bottom, #ff6924, #6c42f5);
 }
 
+html {
+    background-color: #000;
+}
+
 .icon {
     font-size: 2rem;
     margin-right: 1rem;
